# OpenPhysics

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  collisionTest.cpp  collisions.h  flake.nix  main.cpp  object.h  test.cpp
canvas/display/: canvas.cpp
dependancies/glm/glm/: Makefile  cmake_install.cmake
objects/: circle.h  object.h  point.h  rectangle.h
objects/definitions/: circle.h  circle.hpp  object.h  object.hpp  point.hpp  rectangle.h  rectangle.hpp
objects/functions/: circle.cpp  point.cpp  rectangle.cpp
src/: main.cpp
src/canvas/display/: 2Dcanvas.hpp  2Dglutcanvas.hpp  canvas.hpp
src/canvas/shaders/: 2DfragmentShader.hpp  2Dshaders.hpp  2DvertexShader.hpp  3DvertexShader.hpp  fragmentShader.hpp  shaders.hpp  vertexShader.hpp
src/canvas/uiHandlers/: billboard.hpp  keyCallback.hpp  mouseHandler.hpp  scenarioPicker.hpp
src/fileHandlers/: inputProtocol.hpp  outputProtocol.hpp
src/forces/: collisions.hpp  forcesMasterInclude.hpp  gravity.hpp
src/objects/definitions/: GLFWcircle.hpp  GLFWobject.hpp  GLFWrectangle.hpp  circle.hpp  gravityGLFWcircle.hpp  object.hpp  objectsMasterInclude.hpp  point.hpp  rectangle.hpp  velocity.hpp
src/objects/functions/: circle.cpp  object.cpp  point.cpp  rectangle.cpp  velocity.cpp
tests/: Makefile  collisionTest.cpp  glutTest.cpp
tests/src/: MLTest.cpp  billboardTest.cpp  circleTest.cpp  collisionTest.cpp  glutTest.cpp  gravityTest.cpp  lasTest.cpp  planetTest.cpp  pointTest.cpp  rectangleTest.cpp
